tests/invalid/Public_Invalid_10.whiley
type Hidden is (int x) where x >= 5

public property f(Hidden x) -> (bool r):
    x == x

